TLS/ACL 인증 권한 구현/테스트

--- a/distributed/proglog/Makefile
+++ b/distributed/proglog/Makefile
@@ -1,7 +1,9 @@
 CONFIG_PATH = ${HOMEPATH}\.proglog
 .PHONY: init
 init:
-	mkdir ${CONFIG_PATH}
+	if not exist ${CONFIG_PATH} mkdir -p ${CONFIG_PATH}
+	xcopy .\test\model.conf ${CONFIG_PATH}
+	xcopy .\test\policy.csv ${CONFIG_PATH}
 
 .PHONY: gencert
 gencert:
@@ -15,20 +17,34 @@ gencert:
 		-profile=server \
 		test/server-csr.json | cfssljson -bare server
 	
-	xcopy .\ca-key.pem ${CONFIG_PATH}
-	xcopy .\ca.csr ${CONFIG_PATH}
-	xcopy .\ca.pem ${CONFIG_PATH}
-	xcopy .\server-key.pem ${CONFIG_PATH}
-	xcopy .\server.csr ${CONFIG_PATH}
-	xcopy .\server.pem ${CONFIG_PATH}
+	cfssl gencert \
+		-ca=ca.pem \
+		-ca-key=ca-key.pem \
+		-config=test/ca-config.json \
+		-profile=client \
+		test/client-csr.json | cfssljson -bare client
 
-	del .\ca-key.pem
-	del .\ca.csr
-	del .\ca.pem 
-	del .\server-key.pem 
-	del .\server.csr
-	del .\server.pem 
+	cfssl gencert \
+		-ca=ca.pem \
+		-ca-key=ca-key.pem \
+		-config=test/ca-config.json \
+		-profile=client \
+		-cn="root" \
+		test/client-csr.json | cfssljson -bare root-client
 
+	cfssl gencert \
+		-ca=ca.pem \
+		-ca-key=ca-key.pem \
+		-config=test/ca-config.json \
+		-profile=client \
+		-cn="nobody" \
+		test/client-csr.json | cfssljson -bare nobody-client
+
+	xcopy *.pem ${CONFIG_PATH}
+	xcopy *.csr ${CONFIG_PATH}
+	del *.pem
+	del *.csr
+	
 .PHONY: compile
 compile:
 	protoc api/v1/*.proto --go_out=. --go-grpc_out=. --go_opt=paths=source_relative --go-grpc_opt=paths=source_relative --proto_path=.
